--- a/hw3_0415/app/src/main/res/values/strings.xml
+++ b/hw3_0415/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="trombone">Trombone</string>
     <string name="french_horn">French Horn</string>
     <string name="euphonium">Euphonium</string>
-    <string name="tuba">tuba</string>
+    <string name="tuba">Tuba</string>
     <string name="contrabass">Contrabass</string>
     <string name="percussion">Percussion</string>
 
